tests/baselines/reference/typeAnnotationOnDefaultExport1.errors.txt
/b.ts(1,26): error TS2322: Type 'string' is not assignable to type 'number'.
/c.ts(1,26): error TS2322: Type '{}' is not assignable to type 'number'.
/d.ts(5,21): error TS2739: Type '{}' is missing the following properties from type 'I': a, b
/f.ts(1,28): error TS2322: Type 'string[]' is not assignable to type 'number[]'.
  Type 'string' is not assignable to type 'number'.
/g.ts(2,28): error TS2322: Type 'string[]' is not assignable to type 'number[]'.
  Type 'string' is not assignable to type 'number'.
/h.ts(1,25): error TS1005: '=' expected.


==== /a.ts (0 errors) ====
    export default: number = 1;
    
==== /b.ts (1 errors) ====
    export default: number = "";
                             ~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
==== /c.ts (1 errors) ====
    export default: number = {};
                             ~~
!!! error TS2322: Type '{}' is not assignable to type 'number'.
    
==== /d.ts (1 errors) ====
    interface I {
        a: number;
        b: string;
    }
    export default: I = {};
                        ~~
!!! error TS2739: Type '{}' is missing the following properties from type 'I': a, b
    
==== /e.ts (0 errors) ====
    export default: number[] = [];
    
==== /f.ts (1 errors) ====
    export default: number[] = [""];
                               ~~~~
!!! error TS2322: Type 'string[]' is not assignable to type 'number[]'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
    
==== /g.ts (1 errors) ====
    const a = [""];
    export default: number[] = a;
                               ~
!!! error TS2322: Type 'string[]' is not assignable to type 'number[]'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
    
==== /h.ts (1 errors) ====
    export default: number[];
                            ~
!!! error TS1005: '=' expected.
    